refactor: align FiloraFS-Lite with Spring-first BuildBaseKit standards
Use Spring-native file transfer and MIME resolution while preserving filesystem security.

Harden API-key checks for encoded paths and clean up failed uploads.

Add minimal health monitoring and remove the redundant test dependency.

Fix Maven wrapper tracking and executable permissions.

Simplify repository documentation, remove duplication, and normalize README and LICENSE naming.

Apply BuildBaseKit logo and v2 branding to the API tester and Postman collection.

Change the default port to 8080 and synchronize configuration references.

Expand configuration, API, and filesystem regression coverage.