@@ -1,14 +1,16 @@
 package com.file.services;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.core.io.FileSystemResource;
@@ -17,6 +19,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.MediaTypeFactory;
 
 import com.file.config.FiloraFSProperties;
 import com.file.dtos.FileMetadata;
@@ -26,51 +30,71 @@ import jakarta.annotation.PostConstruct;
 @Service
 public class FileService {
 
-	private final FiloraFSProperties properties;
+	private static final Map<String, String> ALLOWED_EXTENSIONS = Map.of(
+			".png", "image/png",
+			".jpg", "image/jpeg",
+			".jpeg", "image/jpeg",
+			".pdf", "application/pdf",
+			".webp", "image/webp");
+
 	private final Path storageRoot;
-	private final List<String> allowedFileType = List.of("image/png", "image/jpeg", "application/pdf", "image/webp");
 
 	public FileService(FiloraFSProperties properties) {
-		this.properties = properties;
-		this.storageRoot = Paths.get(properties.storagePath()).toAbsolutePath().normalize();
+		this.storageRoot = Path.of(properties.storagePath()).toAbsolutePath().normalize();
 	}
 
 	@PostConstruct
 	public void init() {
 		try {
-			if (!Files.exists(storageRoot)) {
-				Files.createDirectories(storageRoot);
+			Files.createDirectories(storageRoot);
+			if (!Files.isDirectory(storageRoot)) {
+				throw new IllegalStateException("Configured storage location is not a directory");
 			}
 		} catch (IOException e) {
-			throw new RuntimeException("Could not initialize storage location", e);
+			throw new IllegalStateException("Could not initialize storage location", e);
 		}
 	}
 
-	public String saveFile(MultipartFile file) throws IOException {
-		String mimeType = file.getContentType();
-		if (mimeType == null || !this.allowedFileType.contains(mimeType)) {
-			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File type not allowed: " + mimeType);
-		}
+	public String saveFile(MultipartFile file) {
 		if (file.isEmpty()) {
 			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File is empty");
 		}
 
-		String originalFilename = file.getOriginalFilename();
-		String extension = "";
-		if (originalFilename != null && originalFilename.contains(".")) {
-			extension = originalFilename.substring(originalFilename.lastIndexOf("."));
+		String extension = getAllowedExtension(file.getOriginalFilename());
+		String expectedMimeType = ALLOWED_EXTENSIONS.get(extension);
+		String declaredMimeType = file.getContentType();
+		if (declaredMimeType == null || !expectedMimeType.equals(declaredMimeType.toLowerCase(Locale.ROOT))) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File type does not match its extension");
 		}
 
 		String filename = UUID.randomUUID().toString() + extension;
-		Path dest = resolvePathSafely(filename);
+		Path destination = resolvePathSafely(filename);
 
-		file.transferTo(dest);
-		return filename;
+		try {
+			if (!expectedMimeType.equals(detectMimeType(file))) {
+				throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File content does not match its type");
+			}
+			// Reserve the generated name atomically: transferTo alone may overwrite an existing file.
+			Files.createFile(destination);
+			try {
+				file.transferTo(destination);
+			} catch (IOException | IllegalStateException e) {
+				try {
+					Files.deleteIfExists(destination);
+				} catch (IOException cleanupFailure) {
+					e.addSuppressed(cleanupFailure);
+				}
+				throw e;
+			}
+			return filename;
+		} catch (IOException | IllegalStateException e) {
+			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Could not store file", e);
+		}
 	}
 
 	public Resource getFileAsResource(String fileName) {
 		Path filePath = resolvePathSafely(fileName);
-		if (!Files.exists(filePath)) {
+		if (!Files.isRegularFile(filePath, LinkOption.NOFOLLOW_LINKS)) {
 			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "File not found");
 		}
 		return new FileSystemResource(filePath);
@@ -78,18 +102,25 @@ public class FileService {
 
 	public boolean deleteFile(String fileName) {
 		Path filePath = resolvePathSafely(fileName);
+		if (!Files.exists(filePath, LinkOption.NOFOLLOW_LINKS)) {
+			return false;
+		}
+		if (!Files.isRegularFile(filePath, LinkOption.NOFOLLOW_LINKS)) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Stored item is not a regular file");
+		}
 		try {
 			return Files.deleteIfExists(filePath);
 		} catch (IOException e) {
-			return false;
+			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Could not delete file", e);
 		}
 	}
 
 	public List<String> listFiles() {
 		try (Stream<Path> stream = Files.list(storageRoot)) {
-			return stream.filter(Files::isRegularFile)
+			return stream.filter(path -> Files.isRegularFile(path, LinkOption.NOFOLLOW_LINKS))
 					.map(path -> path.getFileName().toString())
-					.collect(Collectors.toList());
+					.sorted()
+					.toList();
 		} catch (IOException e) {
 			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Could not list files");
 		}
@@ -97,16 +128,16 @@ public class FileService {
 
 	public FileMetadata getFileMetadata(String fileName) {
 		Path filePath = resolvePathSafely(fileName);
-		if (!Files.exists(filePath)) {
+		if (!Files.isRegularFile(filePath, LinkOption.NOFOLLOW_LINKS)) {
 			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "File not found");
 		}
 
 		try {
-			String mimeType = Files.probeContentType(filePath);
-			if (mimeType == null) mimeType = "application/octet-stream";
+			String mimeType = MediaTypeFactory.getMediaType(fileName)
+					.orElse(MediaType.APPLICATION_OCTET_STREAM).toString();
 
-			String lastModified = DateTimeFormatter.ISO_INSTANT
-					.format(Files.getLastModifiedTime(filePath).toInstant());
+			String lastModified = DateTimeFormatter.ISO_INSTANT.format(
+					Files.getLastModifiedTime(filePath, LinkOption.NOFOLLOW_LINKS).toInstant());
 
 			return new FileMetadata(
 					filePath.getFileName().toString(),
@@ -123,10 +154,71 @@ public class FileService {
 		if (fileName == null || fileName.isBlank()) {
 			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid file name");
 		}
-		Path requestedPath = storageRoot.resolve(fileName).normalize();
-		if (!requestedPath.startsWith(storageRoot)) {
-			throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Path traversal is not allowed");
+
+		try {
+			Path suppliedPath = Path.of(fileName);
+			if (suppliedPath.isAbsolute() || suppliedPath.getNameCount() != 1
+					|| fileName.contains("/") || fileName.contains("\\")) {
+				throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Path traversal is not allowed");
+			}
+
+			Path requestedPath = storageRoot.resolve(suppliedPath).normalize();
+			if (!requestedPath.startsWith(storageRoot) || requestedPath.equals(storageRoot)
+					|| !storageRoot.equals(requestedPath.getParent())) {
+				throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Path traversal is not allowed");
+			}
+			return requestedPath;
+		} catch (InvalidPathException e) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid file name", e);
 		}
-		return requestedPath;
+	}
+
+	private String getAllowedExtension(String originalFilename) {
+		if (originalFilename == null) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File name must include an allowed extension");
+		}
+		int extensionStart = originalFilename.lastIndexOf('.');
+		if (extensionStart < 0) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File name must include an allowed extension");
+		}
+		String extension = originalFilename.substring(extensionStart).toLowerCase(Locale.ROOT);
+		if (!ALLOWED_EXTENSIONS.containsKey(extension)) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "File extension is not allowed");
+		}
+		return extension;
+	}
+
+	private String detectMimeType(MultipartFile file) throws IOException {
+		byte[] header;
+		try (InputStream inputStream = file.getInputStream()) {
+			header = inputStream.readNBytes(12);
+		}
+
+		if (startsWith(header, new byte[] { (byte) 0x89, 0x50, 0x4e, 0x47, 0x0d, 0x0a, 0x1a, 0x0a })) {
+			return "image/png";
+		}
+		if (startsWith(header, new byte[] { (byte) 0xff, (byte) 0xd8, (byte) 0xff })) {
+			return "image/jpeg";
+		}
+		if (startsWith(header, new byte[] { 0x25, 0x50, 0x44, 0x46, 0x2d })) {
+			return "application/pdf";
+		}
+		if (header.length >= 12 && startsWith(header, new byte[] { 0x52, 0x49, 0x46, 0x46 })
+				&& header[8] == 0x57 && header[9] == 0x45 && header[10] == 0x42 && header[11] == 0x50) {
+			return "image/webp";
+		}
+		return null;
+	}
+
+	private boolean startsWith(byte[] value, byte[] prefix) {
+		if (value.length < prefix.length) {
+			return false;
+		}
+		for (int index = 0; index < prefix.length; index++) {
+			if (value[index] != prefix[index]) {
+				return false;
+			}
+		}
+		return true;
 	}
 }
